Week 3 big change

--- a/week3/style.css
+++ b/week3/style.css
@@ -1,3 +1,31 @@
+* {
+  color: hotpink;
+}
+
 h1 {
-    color: limegreen;
+  color: lime;
+}
+
+p {
+  color: blueviolet;
+}
+
+li {
+  color: black;
+}
+
+.my-color {
+  color: crimson;
+}
+
+#instructor {
+  color: purple;
+}
+
+#lastcolor {
+  color: yellowgreen;
+}
+
+[data-email="email"] {
+  color: blue;
 }
