--- a/week3/style.css
+++ b/week3/style.css
@@ -3,6 +3,10 @@ h1 {
   text-transform: uppercase;
   font-weight: 800;
   padding-bottom: 10px;
+  color: burlywood;
+  font-family: "Madimi One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h2 {
@@ -14,4 +18,7 @@ h2 {
 p {
   line-height: 1.4;
   padding: 10px;
+  font-family: "Butterfly Kids", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
