--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -15,3 +15,29 @@ nav h1 {
   padding: 20px;
   text-decoration: none;
 }
+
+h2 {
+  font-size: 50px;
+  text-align: center;
+}
+
+.Question {
+  margin-top: 2%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 0, 10px, 0, 10px;
+  border-radius: 10px;
+  background: linear-gradient(90deg, #162a36 0%, #284251 35%, #317089 100%);
+}
+
+h3 {
+  padding: 10px;
+  color: white;
+  font-size: 20px;
+}
+
+p {
+  padding-bottom: 2%;
+  color: white;
+  font-size: 14px;
+}
