--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #0b1215;
+  background: #171717;
 }
 
 nav {
@@ -10,24 +10,25 @@ nav {
 }
 
 nav h1 {
+  margin-left: 10%;
   display: block;
   color: White;
-  text-align: center;
-  padding: 20px;
+  float: left;
+  padding-left: 2%;
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-decoration: none;
-}
-
-h2 {
+  font-family: "Imbue", serif;
+  font-weight: 400;
   font-size: 50px;
-  text-align: center;
 }
 
 .Question {
   margin-top: 2%;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding: 0, 10px, 0, 10px;
-  border-bottom-style: solid;
+  padding-left: 10%;
+  padding-right: 10%;
+  border-bottom: solid 1px;
+  border-color: white;
 }
 
 h3 {
