--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -24,7 +24,7 @@ nav h1 {
 }
 
 .Question {
-  margin-top: 2%;
+  margin-top: 1%;
   padding-left: 10%;
   padding-right: 10%;
   border-bottom: solid 1px;
@@ -35,10 +35,13 @@ h3 {
   padding: 10px;
   color: white;
   font-size: 20px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 600;
 }
 
 p {
   padding-bottom: 2%;
   color: white;
   font-size: 14px;
+  font-family: "Rubik", sans-serif;
 }
