--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -4,17 +4,15 @@ body {
 
 nav {
   overflow: hidden;
-  border-bottom-style: solid;
   border-color: white;
-  border-width: 1px;
 }
 
 nav h1 {
-  margin-left: 10%;
+  margin-left: 15%;
+  margin-bottom: 5%;
   display: block;
-  color: White;
+  color: #f4f1d0;
   float: left;
-  padding-left: 2%;
   padding-top: 10px;
   padding-bottom: 10px;
   text-decoration: none;
@@ -23,17 +21,22 @@ nav h1 {
   font-size: 50px;
 }
 
-.Question {
+table {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 15%;
   margin-top: 1%;
-  padding-left: 10%;
-  padding-right: 10%;
-  border-bottom: solid 1px;
+  margin-right: 15%;
   border-color: white;
 }
 
-h3 {
-  padding: 10px;
-  color: white;
+td {
+  border: 1px solid white;
+}
+
+h2 {
+  padding-bottom: 10px;
+  color: #f4f1d0;
   font-size: 20px;
   font-family: "Rubik", sans-serif;
   font-weight: 600;
