--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,50 +1,57 @@
 body {
-  background: #171717;
+  background: #121212;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 nav {
+  position: sticky;
+  top: 0;
   overflow: hidden;
-  border-color: white;
+  background-color: #121212;
+  border-bottom: solid 1px;
+  border-color: rgb(61, 61, 61);
 }
 
 nav h1 {
-  margin-left: 15%;
   margin-bottom: 5%;
   display: block;
-  color: #f4f1d0;
+  color: #fffce1;
   float: left;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5%;
   text-decoration: none;
   font-family: "Imbue", serif;
   font-weight: 400;
-  font-size: 50px;
+  font-size: 100px;
 }
 
-table {
+.row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 15%;
-  margin-top: 1%;
-  margin-right: 15%;
-  border-color: white;
 }
 
-td {
-  border: 1px solid white;
+.question {
+  width: 100%;
+}
+
+.content {
+  padding-top: 100px;
+  border-bottom: solid 1px;
+  border-color: rgb(61, 61, 61);
+  padding-bottom: 100px;
 }
 
 h2 {
-  padding-bottom: 10px;
-  color: #f4f1d0;
-  font-size: 20px;
+  color: #fffce1;
+  font-size: 40px;
   font-family: "Rubik", sans-serif;
   font-weight: 600;
+  padding-bottom: 50px;
 }
 
 p {
-  padding-bottom: 2%;
-  color: white;
-  font-size: 14px;
+  padding-bottom: 10px;
+  color: #fffce1;
+  font-size: 20px;
   font-family: "Rubik", sans-serif;
 }
