--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,37 +1,44 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background: #121212;
-  margin-left: 10%;
+  background: #121212; /*Background colour. Very dark grey but not fully black.*/
+  margin-left: 10%; /*Contain all the elements within the middle 80% of the screen*/
   margin-right: 10%;
 }
 
 nav {
-  position: sticky;
+  position: sticky; /*Enable navbar to stay on top even while scrolling*/
   top: 0;
-  overflow: hidden;
+  overflow: hidden; /*Ensure elements does not enter the navbar area*/
   background-color: #121212;
-  border-bottom: solid 1px;
+  border-bottom: solid 1px; /*bottom border to divide each element*/
   border-color: rgb(61, 61, 61);
 }
 
 nav h1 {
-  margin-bottom: 5%;
-  display: block;
-  color: #fffce1;
-  float: left;
-  padding-top: 5%;
-  text-decoration: none;
-  font-family: "Imbue", serif;
-  font-weight: 400;
+  margin-bottom: 3%; /*Adding some space to the element*/
+  margin-top: 3%;
+  color: #fffce1; /*Text colour. Slightly yellow white*/
+  float: left; /*Elements gets arranged from the left*/
+  font-family: "Imbue", serif; /*Fancy, serif font for title to give a retro feel*/
+  font-weight: 400; /*Font thickness.*/
   font-size: 100px;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
+nav a {
+  margin-top: 3%;
+  float: right; /*Elements gets arranged from the right*/
+  color: #fffce1;
+  text-decoration: none; /*Removes underline on link texts*/
+  font-family: "Imbue", serif;
+  font-weight: 100; /*Font thickness.*/
+  font-size: 100px;
 }
 
 .content {
-  padding-top: 100px;
+  padding-top: 100px; /*Adds space*/
   border-bottom: solid 1px;
   border-color: rgb(61, 61, 61);
   padding-bottom: 100px;
@@ -41,7 +48,7 @@ h2 {
   font-size: 40px;
   font-family: "Rubik", sans-serif;
   font-weight: 600;
-  padding-bottom: 50px;
+  padding-bottom: 50px; /*Adds space below text*/
 }
 
 p {
@@ -55,6 +62,7 @@ p {
   color: rgb(255, 134, 90);
 }
 
+/*Applies colours to the color classes that were defined in html for the title*/
 .purple {
   color: rgb(247, 183, 247);
 }
