--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -1,11 +1,9 @@
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; /*makes return to top button smooth scroll instead of instant*/
 }
 
 body {
   background: #121212; /*Background colour. Very dark grey but not fully black.*/
-  margin-left: 10%; /*Contain all the elements within the middle 80% of the screen*/
-  margin-right: 10%;
 }
 
 nav {
@@ -17,18 +15,35 @@ nav {
   border-color: rgb(61, 61, 61);
 }
 
-nav h1 {
-  margin-bottom: 3%; /*Adding some space to the element*/
-  margin-top: 3%;
-  color: #fffce1; /*Text colour. Slightly yellow white*/
+.navsection {
   float: left; /*Elements gets arranged from the left*/
+  margin-left: 10%; /*Adding some space to the element*/
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+
+strong {
+  font-weight: 500; /*Font thickness*/
+}
+
+nav h1 {
+  color: #fffce1; /*Text colour. Slightly yellow white*/
   font-family: "Imbue", serif; /*Fancy, serif font for title to give a retro feel*/
-  font-weight: 400; /*Font thickness.*/
+  font-weight: 400;
   font-size: 100px;
 }
 
+nav p {
+  color: #fffce1; /*Text colour. Slightly yellow white*/
+  font-family: "Imbue", serif; /*Fancy, serif font for title to give a retro feel*/
+  font-weight: 200;
+  font-size: 24px;
+}
+
 nav a {
+  margin-right: 10%;
   margin-top: 3%;
+  margin-bottom: 2%;
   float: right; /*Elements gets arranged from the right*/
   color: #fffce1;
   text-decoration: none; /*Removes underline on link texts*/
@@ -37,8 +52,13 @@ nav a {
   font-size: 100px;
 }
 
+.container {
+  margin-left: 10%; /*Adding some space to the element*/
+  margin-right: 10%;
+}
+
 .content {
-  padding-top: 100px; /*Adds space*/
+  padding-top: 100px; /*Adding some space to the element*/
   border-bottom: solid 1px;
   border-color: rgb(61, 61, 61);
   padding-bottom: 100px;
@@ -46,7 +66,7 @@ nav a {
 
 h2 {
   font-size: 40px;
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik", sans-serif; /*Neat, sans-serif font for readability*/
   font-weight: 600;
   padding-bottom: 50px; /*Adds space below text*/
 }
@@ -77,4 +97,15 @@ p {
 
 .blue {
   color: rgb(119, 143, 250);
+}
+
+footer {
+  color: #fffce1;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: auto; /*Centers the text by centering a full-width element*/
+  text-align: center;
+  font-family: "Imbue", serif;
+  font-weight: 200;
+  font-size: 20px;
 }
