--- a/assignment1/style.css
+++ b/assignment1/style.css
@@ -64,6 +64,17 @@ nav a {
   padding-bottom: 100px;
 }
 
+.title {
+  
+  position: absolute;
+  font-size: 300px;
+  font-family: "Imbue", serif;
+  font-weight: 600;
+  color:rgba(255, 255, 255, 0.13);;
+  z-index: -1;
+
+}
+
 h2 {
   font-size: 40px;
   font-family: "Rubik", sans-serif; /*Neat, sans-serif font for readability*/
