--- a/week4/boxmodel/style.css
+++ b/week4/boxmodel/style.css
@@ -24,3 +24,15 @@ h1 {
   width: 400px;
   min-height: 200px;
 }
+
+p {
+  padding: 10px;
+}
+
+.inner {
+  width: 100px;
+  height: 100px;
+  background-color: coral;
+  margin: 10px;
+  border: 5px solid lightblue;
+}
