--- a/week4/boxmodel/style1.css
+++ b/week4/boxmodel/style1.css
@@ -77,8 +77,7 @@ a {
 #box4 {
   background-color: coral;
   grid-column: 1/3;
-  /* grid-column: 1/3;
-    grid-row: 2/5; */
+  grid-row: 2/4;
 }
 #box5 {
   background-color: yellow;
