--- a/week4/Layouts/style.css
+++ b/week4/Layouts/style.css
@@ -78,6 +78,6 @@ li a.hover {
 }
 
 .portfolio > img:nth-child(1) {
-  /* grid-column: 1/3;
-    grid-row: 1/3; */
+  grid-column: 1/3;
+  grid-row: 1/3;
 }
