--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -36,6 +36,47 @@ nav a:hover {
   background-color: rgb(255, 227, 175);
 }
 
+.video-controls button {
+  width: 36px;
+  height: 36px;
+  background-color: rgb(255, 126, 51);
+  border-style: none;
+  border-radius: 2em;
+  margin-right: 1%;
+  margin-top: 1%;
+}
+
+.video-controls button:hover {
+  background-color: rgb(221, 100, 30);
+}
+
+.video-controls img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.buttonwrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.left {
+  display: flex;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-right: 0;
+  flex: 1;
+}
+
 header {
   font-family: "Pacifico", cursive;
   color: rgb(255, 126, 51);
@@ -49,8 +90,8 @@ header {
   margin-top: 3%;
   margin-bottom: 10px;
   font-family: "Inter", sans-serif;
-  font-weight: 600;
-  font-size: 30px;
+  font-weight: 900;
+  font-size: 40px;
 }
 
 .video-container {
@@ -68,6 +109,24 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: solid 1px rgb(168, 168, 168);
+}
+
+.progress-bar {
+  width: 100%;
+  height: 15px;
+  background-color: #e5e5cb68;
+  margin-top: 10px;
+  overflow: hidden;
+  transform-origin: 0 100%;
+  border-radius: 16px;
+}
+
+.progress-bar span {
+  display: block;
+  height: 100%;
+  background-color: coral;
+  width: 0;
+  transition: width 0.3s ease;
 }
 
 .row {
@@ -96,7 +155,6 @@ header {
   font-weight: 600;
   font-size: 30px;
   margin-top: 2%;
-  padding-bottom: 2%;
 }
 
 .description h1 {
@@ -113,7 +171,7 @@ header {
 }
 
 .description ul {
-  list-style: none;
+  list-style-type: square;
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -151,4 +209,37 @@ header {
   text-decoration: none;
   font-size: 16px;
   border-radius: 4px;
+}
+
+.description button:hover {
+  background-color: rgb(221, 100, 30);
+}
+
+footer {
+  display: flex;
+  background-color: rgb(36, 34, 34);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+footer .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+footer .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+}
+
+footer p,
+footer ul {
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  padding-left: 10%;
 }
