--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -217,7 +217,7 @@ header {
 
 footer {
   display: flex;
-  background-color: rgb(36, 34, 34);
+  background-color: rgb(255, 244, 210);
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -238,7 +238,7 @@ footer .column {
 
 footer p,
 footer ul {
-  color: white;
+  color: black;
   font-family: "Inter", sans-serif;
   font-size: 12px;
   padding-left: 10%;
