--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -92,6 +92,7 @@ header {
   font-family: "Inter", sans-serif;
   font-weight: 900;
   font-size: 40px;
+  color: black;
 }
 
 .video-container {
@@ -155,12 +156,14 @@ header {
   font-weight: 600;
   font-size: 30px;
   margin-top: 2%;
+  color: black;
 }
 
 .description h1 {
   font-family: "Inter", sans-serif;
   font-weight: 800;
   font-size: 30px;
+  color: black;
 }
 
 .description p {
@@ -168,6 +171,7 @@ header {
   font-weight: 400;
   font-size: 18px;
   padding-bottom: 2%;
+  color: black;
 }
 
 .description ul {
@@ -177,6 +181,7 @@ header {
   font-size: 18px;
   padding-top: 3px;
   padding-bottom: 3px;
+  color: black;
 }
 
 .description button {
@@ -200,7 +205,7 @@ header {
   height: 100%;
   background-color: rgb(255, 126, 51);
   border: none;
-  color: white;
+  color: rgb(255, 255, 255);
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
