--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -26,7 +26,7 @@ nav a {
   text-decoration: none;
   margin-left: 1%;
   margin-right: 1%;
-  color: black;
+  color: rgb(30, 30, 30);
   font-family: "Inter", sans-serif;
   font-size: 20px;
   padding: 20px;
@@ -92,7 +92,7 @@ header {
   font-family: "Inter", sans-serif;
   font-weight: 900;
   font-size: 40px;
-  color: black;
+  color: rgb(30, 30, 30);
 }
 
 .video-container {
@@ -156,14 +156,14 @@ header {
   font-weight: 600;
   font-size: 30px;
   margin-top: 2%;
-  color: black;
+  color: rgb(30, 30, 30);
 }
 
 .description h1 {
   font-family: "Inter", sans-serif;
   font-weight: 800;
   font-size: 30px;
-  color: black;
+  color: rgb(30, 30, 30);;
 }
 
 .description p {
@@ -171,7 +171,7 @@ header {
   font-weight: 400;
   font-size: 18px;
   padding-bottom: 2%;
-  color: black;
+  color: rgb(30, 30, 30);;
 }
 
 .description ul {
@@ -181,7 +181,7 @@ header {
   font-size: 18px;
   padding-top: 3px;
   padding-bottom: 3px;
-  color: black;
+  color: rgb(30, 30, 30);;
 }
 
 .description button {
@@ -243,7 +243,7 @@ footer .column {
 
 footer p,
 footer ul {
-  color: black;
+  color: rgb(30, 30, 30);;
   font-family: "Inter", sans-serif;
   font-size: 12px;
   padding-left: 10%;
