--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -6,8 +6,8 @@ body {
   overflow: hidden;
 }
 
-.cookies {
-  max-height: 100vh;
+#canvas {
+  height: 100vh;
 }
 
 .row {
@@ -16,6 +16,6 @@ body {
 
 .column {
   flex: 1;
-  padding: 10%;
+  padding: 5%;
   border: solid 1px rgba(0, 0, 0, 0.096);
 }
