--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -1,162 +1,53 @@
-/* body {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  margin: 0rem;
-  overflow: hidden;
-}
-
-#card-container {
-  display: flex;
-  gap: 4vmin;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(0%, -50%);
-  user-select: none;
-}
-
-#card-container > .card {
-  width: 40vmin;
-  height: 56vmin;
-  object-fit: cover;
-  object-position: 100% center;
-} */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  background-color: #000;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.gallery {
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card {
   position: absolute;
-  left: 10%;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30%;
-  height: 90%;
-  max-height: 28vw;
-  overflow: hidden;
+  transition: transform 0.6s cubic-bezier(0, 0.55, 0.45, 1);
 }
 
-.gallery__stream {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  height: 100%;
+.card:nth-child(1) {
+  transform: translatex(-10%) rotate(-6deg);
 }
 
-.gallery__item {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  transition: 1s all ease;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  border-radius: 5px;
+.card:nth-child(2) {
+  transform: translatex(10%) rotate(6deg);
 }
 
-.gallery__item:nth-child(1) {
-  left: 0;
-  z-index: 1;
-  transform: translateX(-100%) scale(0.8);
+.card:nth-child(3) {
+  transform: translatex(-5%) rotate(-3deg);
 }
 
-.gallery__item:nth-child(2) {
-  left: 0;
-  z-index: 2;
-  transform: translateX(-50%) scale(0.8);
+.card:nth-child(4) {
+  transform: translatex(5%) rotate(3deg);
 }
 
-.gallery__item:nth-child(3) {
-  left: 50%;
-  z-index: 4;
-  transform: translateX(-50%) scale(1);
+.card-container:hover > .card:nth-child(1) {
+  transform: translate(-80%, 15%) rotate(-21deg);
 }
 
-.gallery__item:nth-child(4) {
-  left: 100%;
-  z-index: 2;
-  transform: translateX(-50%) scale(0.8);
+.card-container:hover > .card:nth-child(2) {
+  transform: translate(80%, 15%) rotate(21deg);
 }
 
-.gallery__item:nth-child(n + 5) {
-  left: 100%;
-  z-index: 1;
-  transform: scale(0.8);
+.card-container:hover > .card:nth-child(3) {
+  transform: translate(-35%, 5%) rotate(-15deg);
 }
 
-.bg-1 {
-  background-image: url(https://images.unsplash.com/photo-1524781289445-ddf8f5695861?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+.card-container:hover > .card:nth-child(4) {
+  transform: translate(35%, 5%) rotate(15deg);
 }
 
-.bg-2 {
-  background-image: url(https://images.unsplash.com/photo-1610194352361-4c81a6a8967e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80);
-}
-
-.bg-3 {
-  background-image: url(https://images.unsplash.com/photo-1618202133208-2907bebba9e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
-}
-
-.bg-4 {
-  background-image: url(https://images.unsplash.com/photo-1495805442109-bf1cf975750b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
-}
-
-.bg-5 {
-  background-image: url(https://images.unsplash.com/photo-1548021682-1720ed403a5b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
-}
-
-.gallery__prev,
-.gallery__next {
-  position: absolute;
-  top: 50%;
-  z-index: 4;
-  width: 50%;
-  height: 100%;
-  transform: translateX(-50%) translateY(-50%) scale(0.8);
-  cursor: pointer;
-}
-
-.gallery__prev {
-  left: 0;
-}
-
-.gallery__next {
-  left: 100%;
-}
-
-.gallery:before,
-.gallery:after {
-  display: block;
-  content: "";
-  position: absolute;
-  top: 0;
-  width: 20%;
-  height: 100%;
-  z-index: 3;
-}
-
-.gallery:before {
-  left: 0;
-  background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
-}
-
-.gallery:after {
-  right: 0;
-  background: linear-gradient(
-    to left,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+.card:hover {
+  scale: 105%;
+  transition: scale 0.5s cubic-bezier(0, 0.55, 0.45, 1);
 }
