THE CARDS WORK LETS GOOOOOOOOOOOOOOOOOOOOOO

--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -12,7 +12,6 @@ body {
   width: 360px;
   height: 550px;
   transform-style: preserve-3d;
-  transition: transform 1s ease;
 }
 
 .card-front,
@@ -21,9 +20,80 @@ body {
   backface-visibility: hidden;
 }
 
+.card:nth-child(1) {
+  position: absolute;
+  transform: translatex(-10%) rotate(-6deg);
+}
+
+.card:nth-child(2) {
+  position: absolute;
+  transform: translatex(10%) rotate(6deg);
+}
+
+.card:nth-child(3) {
+  position: absolute;
+  transform: translatex(-5%) rotate(-3deg);
+}
+
+.card:nth-child(4) {
+  position: absolute;
+  transform: translatex(5%) rotate(3deg);
+}
+
 .card-container:hover > .card {
   cursor: pointer;
+  transition: transform 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+}
+
+.card-container:hover > .card:nth-child(1) {
+  transform: translate(-80%, 15%) rotate(-21deg);
+}
+
+.card-container:hover > .card:nth-child(2) {
+  transform: translate(80%, 15%) rotate(21deg);
+}
+
+.card-container:hover > .card:nth-child(3) {
+  transform: translate(-35%, 5%) rotate(-15deg);
+}
+
+.card-container:hover > .card:nth-child(4) {
+  transform: translate(35%, 5%) rotate(15deg);
+}
+
+.card-container > .card:hover {
+  scale: 110%;
+  transition: scale 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+}
+
+.card.is-flipped {
+  transition: transform 0.6s ease;
   transform: rotateY(180deg);
+  z-index: 1;
+}
+
+.card-container:hover > .card:nth-child(1).is-flipped {
+  transition: transform 0.6s ease;
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+
+.card-container:hover > .card:nth-child(2).is-flipped {
+  transition: transform 0.6s ease;
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+
+.card-container:hover > .card:nth-child(3).is-flipped {
+  transition: transform 0.6s ease;
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+
+.card-container:hover > .card:nth-child(4).is-flipped {
+  transition: transform 0.6s ease;
+  transform: rotateY(180deg);
+  z-index: 1;
 }
 
 .card-back {
