--- a/experiments/style.css
+++ b/experiments/style.css
@@ -95,6 +95,9 @@ button {
 }
 .modalbox {
   display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -107,10 +110,11 @@ button {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.modalbox img {
+#modalcard {
   scale: 1.1;
-  transform: rotate(5deg);
   z-index: 2;
+  transform-style: preserve-3d;
+  border-radius: 2em;
 }
 
 .modal-content {
