--- a/experiments/style.css
+++ b/experiments/style.css
@@ -38,6 +38,8 @@ button {
   animation: bounce 2s;
   animation-iteration-count: infinite;
   animation-timing-function: cubic-bezier(0.45, 0, 0.55, 1);
+  box-shadow: 0px 0px 30px rgb(249, 210, 122, 1);
+  border-radius: 2em;
 }
 
 .row:hover > .column {
@@ -46,11 +48,9 @@ button {
 }
 
 .row:hover > .column.is-clicked {
-  transform: scale(2, 2);
-  transition: transform 1s ease;
-  animation: fadeout 1s;
-  animation-fill-mode: forwards;
-  z-index: 1;
+  transform: translateY(-500%);
+  transition: transform 0.6s cubic-bezier(0.55, 0, 1, 0.45);
+  z-index: 0;
 }
 
 .row:hover > .column.is-letgo {
@@ -110,8 +110,8 @@ button {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-#modalcard {
-  scale: 1.1;
+.modalcard {
+  scale: 1.3;
   z-index: 2;
   transform-style: preserve-3d;
   border-radius: 2em;
