--- a/experiments/style.css
+++ b/experiments/style.css
@@ -215,7 +215,7 @@ h1 {
 @keyframes fadingText {
   0% {
     transform: translate(0, 50px);
-    opacity: ;
+    opacity: 0;
   }
   50% {
     transform: translate(0, 0);
